Deployment.goServer.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
    name: go-server
    namespace: go-mongo
    labels:
        app: go-server

spec:
    replicas: 1
    selector:
        matchLabels:
            app: go-server
    template:
        metadata:
            labels:
                app: go-server
        spec:
            containers:
                - name: go-server
                  image: tushartyke/go-mongo-server:latest
                  ports:
                      - containerPort: 8080
---
apiVersion: v1
kind: Service

metadata:
    name: go-server-service
    namespace: go-mongo

spec:
    # type: NodePort
    selector:
        app: go-server
    ports:
        - protocol: TCP
          port: 8080
        
          targetPort: 8080
        #   nodePort: 30000
